--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
-
-{
+﻿{
   "name": "দেশ পরিচালনা গেম",
-  "short_name": "দেশ গেম",
-  "start_url": "index.html",
+  "short_name": "CountryGame",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#eef",
+  "background_color": "#004466",
   "theme_color": "#004466",
-  "icons": [{
-    "src": "icon.png",
-    "type": "image/png",
-    "sizes": "192x192"
-  }]
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
