--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,9 @@
-{
+﻿{
   "name": "দেশ পরিচালনা গেম",
   "short_name": "CountryGame",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#eef",
-  "theme_color": "#004466",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#dfefff",
+  "theme_color": "#0055aa",
+  "icons": []
 }
